add filter tabs

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <title>r-gallery</title>
   </head>
   <body>
-    <h1>Gallery</h1>
+    <!-- <h1>Gallery</h1> -->
     <div id="root"></div>
    
   </body>
